# mp3exe_libzplay

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Readme.txt  mp3exe.dsp  mp3exe.dsw  mp3exe.opt  mp3exe.plg  mp3exe.sln  mp3exe.vcproj  mp3exe.vcxproj  mp3exe.vcxproj.filters
.github/workflows/: main.yml
libwmp3/: Readme.txt  dsp_superequ.txt  libmad_readme.txt
libwmp3/src/: example.cpp  libwmp3.cpp  libwmp3.def  libwmp3.h  resource.rc  wequ.cpp  wequ.h  wmp3.cpp  wmp3.h  wmp3decoder.cpp  wmp3decoder.h  wqueue.cpp  wqueue.h  wwave.cpp  wwave.h
libwmp3/vc++/: LIBWMP3.SLN  libwmp3.dsw
libwmp3/vc++/build_dll/: build_dll.dsp  build_dll.plg  build_dll.vcproj  build_dll.vcxproj  build_dll.vcxproj.filters
libwmp3/vc++/build_static/: build_static.dsp  build_static.plg  build_static.vcproj  build_static.vcxproj  build_static.vcxproj.filters
libwmp3/vc++/example_dynamic/: example_dynamic.dsp  example_dynamic.plg  example_dynamic.vcproj  example_dynamic.vcxproj  example_dynamic.vcxproj.filters
libwmp3/vc++/example_static/: example_static.dsp  example_static.plg  example_static.vcproj  example_static.vcxproj  example_static.vcxproj.filters
src/: Main.cpp  Mainform.cpp  WVUMeter.cpp  WVUMeter.h  Wbmpfont.cpp  Wform.cpp  Wform.h  main.h  mainform.h  resource.h  resource.rc  vumeter.cpp  vumeter.h  wapp.cpp  wapp.h  wbmpbutton.cpp  wbmpbutton.h  wbmpfont.h  wbmptextbox.cpp  wbmptextbox.h  wcontrol.cpp  wcontrol.h  wfile.cpp  wfile.h  wfont.cpp  wfont.h  winikey.cpp  winikey.h  wmem.cpp  wmem.h  wmixer.cpp  wmixer.h  wopendialog.cpp  wopendialog.h  wsavedialog.cpp  wsavedialog.h  wscrollbar.cpp  wscrollbar.h  wtooltip.cpp  wtooltip.h
vcpkg-ports/libzplay/: portfile.cmake  usage  vcpkg.json
vcpkg-ports/soundtouch/: 0001-make-ptrbegin-public.patch  portfile.cmake  vcpkg.json
